# lowrankapproximation

./: .gitignore  Low-rank-approximation-demo.ipynb  README.md  imagenet_results.ipynb  pyproject.toml
data/baseline_2gpu/: baseline_2gpu_eval_measurements.csv  baseline_2gpu_flags_0.json  baseline_2gpu_measurements.csv  baseline_2gpu_meta_data_0.json
data/baseline_2gpu_15000_steps/: eval_measurements.csv  flags_0.json  meta_data_0.json
data/baseline_4gpu/: baseline_4gpu_eval_measurements.csv  baseline_4gpu_flags_0.json  baseline_4gpu_measurements.csv  baseline_4gpu_meta_data_0.json
data/baseline_4gpu_200_epoch/: eval_measurements.csv  flags_0.json  meta_data_0.json
data/baseline_8gpu/: baseline_8gpu_eval_measurements.csv  baseline_8gpu_flags_0.json  baseline_8gpu_measurements.csv  baseline_8gpu_meta_data_0.json
data/baseline_8gpu_200_epoch/: eval_measurements.csv  flags_0.json  meta_data_0.json
data/baseline_8gpu_4x_batch/: eval_measurements.csv  flags_0.json  meta_data_0.json
data/baseline_8gpu_8x_batch/: eval_measurements.csv  flags_0.json  meta_data_0.json
data/baseline_8gpu_8x_batch_lr2_again/: eval_measurements.csv  flags_0.json  meta_data_0.json
data/baseline_8gpu_8x_batch_lr_2/: eval_measurements.csv  flags_0.json  meta_data_0.json
data/baseline_8gpu_8x_batch_lr_8/: flags_0.json  (+2 more)
examples/: final_run.py  rank_sweep.py  run_adam.py  run_muon.py  run_sprint.py  run_sweep.py  speedrun_low_rank_optimizer.py  tune_adam.py  tune_all.py  tune_hybrid.py  tune_muon.py
jax/: linalg.py  submission.py
pytorch/: linear_algebra.py  low_rank_comm.py
(+67 files in other folders)
